Modifications pour la configuration de l'api CLIP

--- a/dspace/config/local.cfg
+++ b/dspace/config/local.cfg
@@ -22,6 +22,8 @@
 
 include = local.local.cfg
 
+assetstore.dir = ${dspace.dir}/assetstore
+
 # Les propriétés définies dans local.local.cfg ont priorités sur celles
 # définies ci-dessous, si jamais elles sont le même nom. Donc le fichier
 # local.local.cfg pourrait aussi servir à redéféfinir localement des 
@@ -67,11 +69,6 @@ registry.metadata.load = calypso-types.xml
 # Consumers #
 #############
 
-# Pour travailler sur le consumer "CLIP", retirer les commentaires des trois
-# lignes suivantes
-#event.dispatcher.default.consumers = versioning, discovery, eperson, iiif, clip, test
-#event.consumer.test.class = org.dspace.event.TestConsumer
-#event.consumer.test.filters = All+All
 
 ########
 # IIIF #
@@ -89,7 +86,7 @@ iiif.search.plugin = org.dspace.app.iiif.service.CalypsoWordHighlightSolrSearch
 ########
 # CLIP #
 ########
-
+event.dispatcher.default.consumers = versioning, discovery, eperson, submissionconfig, iiif, clip
 event.consumer.clip.class = ca.umontreal.bib.calypso.clip.ClipConsumer
 event.consumer.clip.filters = Collection+ADD:Item+Install:Item+Modify:Bitstream+Create:Bitstream+Delete
 calypso.clip.server.url=http://localhost:8000
