Première implantation de la nouvelle méthode pour les Rendering

--- a/dspace/config/local.cfg
+++ b/dspace/config/local.cfg
@@ -75,4 +75,8 @@ event.dispatcher.default.consumers = versioning, discovery, eperson, iiif
 iiif.search.url = ${solr.server}/${solr.multicorePrefix}ocr
 iiif.search.plugin = org.dspace.app.iiif.service.CalypsoWordHighlightSolrSearch
 
+# Pour ajouter des rendering depuis un bundle spécifique et pour pointer sur l'item
+iiif.rendering.bundle = RENDERING
+#iiif.rendering.item = Lien vers la notice pour cet item
+
 # Plusieurs autres configurations possibles, voir modules/iiif.cfg
