--- a/dspace/modules/additions/pom.xml
+++ b/dspace/modules/additions/pom.xml
@@ -209,6 +209,10 @@
          <artifactId>dspace-api</artifactId>
       </dependency>
       <dependency>
+         <groupId>org.dspace</groupId>
+         <artifactId>dspace-iiif</artifactId>
+      </dependency>
+      <dependency>
           <groupId>org.dspace</groupId>
           <artifactId>dspace-api</artifactId>
           <type>test-jar</type>
