Nouvelle méthode pour les rendering depuis un bundle spécifique + lien vers la notice en rendering

--- a/dspace/config/local.cfg
+++ b/dspace/config/local.cfg
@@ -77,6 +77,6 @@ iiif.search.plugin = org.dspace.app.iiif.service.CalypsoWordHighlightSolrSearch
 
 # Pour ajouter des rendering depuis un bundle spécifique et pour pointer sur l'item
 iiif.rendering.bundle = RENDERING
-#iiif.rendering.item = Lien vers la notice pour cet item
+iiif.rendering.item = Notice complète
 
 # Plusieurs autres configurations possibles, voir modules/iiif.cfg
