--- a/dspace/config/local.cfg
+++ b/dspace/config/local.cfg
@@ -79,4 +79,9 @@ iiif.search.plugin = org.dspace.app.iiif.service.CalypsoWordHighlightSolrSearch
 iiif.rendering.bundle = RENDERING
 iiif.rendering.item = Notice complète
 
+# Pour ajouter du contenu OCR aux images
+iiif.ocr.bundle = OCR
+iiif.ocr.seealso.label = Contenu issu de l'OCR
+iiif.ocr.seealso.profile = http://www.loc.gov/standards/alto/v3/alto.xsd
+
 # Plusieurs autres configurations possibles, voir modules/iiif.cfg
