Ajout d'un seeAlso à un item pour chaque fichier dans un bundle spécifié dans la configuration

--- a/dspace/config/local.cfg
+++ b/dspace/config/local.cfg
@@ -79,6 +79,9 @@ iiif.search.plugin = org.dspace.app.iiif.service.CalypsoWordHighlightSolrSearch
 iiif.rendering.bundle = RENDERING
 iiif.rendering.item = Notice complète
 
+# Pour ajouter des seeAlso à un item depuis un bundle spécifique
+iiif.seealso.bundle = SEEALSO
+
 # Pour ajouter du contenu OCR aux images
 iiif.ocr.bundle = OCR
 iiif.ocr.seealso.label = Contenu issu de l'OCR
