--- a/dspace/config/local.cfg
+++ b/dspace/config/local.cfg
@@ -87,4 +87,8 @@ iiif.ocr.bundle = OCR
 iiif.ocr.seealso.label = Contenu issu de l'OCR
 iiif.ocr.seealso.profile = http://www.loc.gov/standards/alto/v3/alto.xsd
 
+# Pour ajouter des transcriptions aux images
+iiif.transcriptions.bundle = TRANSCRIPTIONS
+iiif.transcriptions.label = Transcriptions
+
 # Plusieurs autres configurations possibles, voir modules/iiif.cfg
