Développement pour l'indexation avec CLIP

--- a/dspace/config/local.cfg
+++ b/dspace/config/local.cfg
@@ -68,7 +68,7 @@ registry.metadata.load = calypso-types.xml
 ########
 
 iiif.enabled = true
-event.dispatcher.default.consumers = versioning, discovery, eperson, iiif
+event.dispatcher.default.consumers = versioning, discovery, eperson, iiif, clip
 
 # Pour la recherche dans les documents avec OCR, ajuster
 # dans local.local.cfg si ce n'est pas le core "ocr"
@@ -92,3 +92,11 @@ iiif.transcriptions.bundle = TRANSCRIPTIONS
 iiif.transcriptions.label = Transcriptions
 
 # Plusieurs autres configurations possibles, voir modules/iiif.cfg
+
+########
+# CLIP #
+########
+
+event.consumer.clip.class = ca.umontreal.bib.calypso.clip.ClipConsumer
+event.consumer.clip.filters = Collection+ADD:Item+Install:Item+Modify:Bitstream+Create:Bitstream+Delete
+calypso.clip.server.url=http://localhost:8000
