--- a/dspace/config/local.cfg
+++ b/dspace/config/local.cfg
@@ -84,7 +84,7 @@ iiif.seealso.bundle = SEEALSO
 
 # Pour ajouter du contenu OCR aux images
 iiif.ocr.bundle = OCR
-iiif.ocr.seealso.label = Contenu issu de l'OCR
+iiif.ocr.seealso.label = Contenu OCR
 iiif.ocr.seealso.profile = http://www.loc.gov/standards/alto/v3/alto.xsd
 
 # Pour ajouter des transcriptions aux images
@@ -93,10 +93,11 @@ iiif.transcriptions.label = Transcriptions
 
 # Plusieurs autres configurations possibles, voir modules/iiif.cfg
 
-########
-# CLIP #
-########
+###########
+# AI-CLIP #
+###########
 
 event.consumer.clip.class = ca.umontreal.bib.calypso.clip.ClipConsumer
 event.consumer.clip.filters = Collection+ADD:Item+Install:Item+Modify:Bitstream+Create:Bitstream+Delete
-calypso.clip.server.url=http://localhost:8000
+calypso.clip.server.url = http://localhost:8000
+calypso.clip.bundle.execute = ORIGINAL
