Mettre à jour les références en utilisant le référentiel DSpace.

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,12 @@ rebel.xml
 
 ## Ignore jenv configuration
 .java-version
+# Directories generated as a result of compilation
+/assetstore
+/lib
+/log
+/sitemaps
+/solr
+/webapps
+/config
+/sources
