--- a/dspace/config/local.cfg
+++ b/dspace/config/local.cfg
@@ -79,6 +79,15 @@ iiif.search.plugin = org.dspace.app.iiif.service.CalypsoWordHighlightSolrSearch
 iiif.rendering.bundle = RENDERING
 iiif.rendering.item = Notice complète
 
+#iiif v3
+iiif.image.server.v3 = http://localhost:8182/iiif/3/
+
+iiif.metadata.item = dc.title
+iiif.metadata.item = dc.date.issued
+iiif.metadata.item = dc.contributor.*
+iiif.metadata.item = dc.description.abstract
+iiif.metadata.item = dc.language.iso
+
 # Pour ajouter des seeAlso à un item depuis un bundle spécifique
 iiif.seealso.bundle = SEEALSO
 
