Ajout de la section "viewingDirection" spécifique seulement à v3.

--- a/dspace/config/local.cfg
+++ b/dspace/config/local.cfg
@@ -100,6 +100,9 @@ iiif.ocr.seealso.profile = http://www.loc.gov/standards/alto/v3/alto.xsd
 iiif.transcriptions.bundle = TRANSCRIPTIONS
 iiif.transcriptions.label = Transcriptions
 
+# Ajouter la direction dans manifest en v3. Option possibles:  left-to-right, right-to-left, top-to-bottom, bottom-to-top, TOP_TO_BOTTOM
+iiif.v3.document.viewing.direction =  left-to-right
+
 # Plusieurs autres configurations possibles, voir modules/iiif.cfg
 
 ###########
