Ajout de la configuration pour activer la version 3 par défaut et activation des routes /v3 et /v2 pour retourner les manifests de chaque version demandée.

--- a/dspace/config/local.cfg
+++ b/dspace/config/local.cfg
@@ -80,6 +80,8 @@ iiif.rendering.bundle = RENDERING
 iiif.rendering.item = Notice complète
 
 #iiif v3
+# Activer la version 3 par default
+iiif.v3 = true
 iiif.image.server.v3 = http://localhost:8182/iiif/3/
 
 iiif.metadata.item = dc.title
