Ajout du component "annotations" dans items. Le sinfos de ce component sont bons, mais dans mirador du coté frontend on voit pas l'image.

--- a/dspace/config/local.cfg
+++ b/dspace/config/local.cfg
@@ -82,7 +82,7 @@ iiif.rendering.item = Notice complète
 #iiif v3
 # Activer la version 3 par default
 iiif.v3 = true
-iiif.image.server.v3 = http://localhost:8182/iiif/3/
+iiif.image.server = http://localhost:8182/iiif/3/
 
 iiif.metadata.item = dc.title
 iiif.metadata.item = dc.date.issued
