Sauvegarde des modifications en cours

--- a/dspace/config/local.cfg
+++ b/dspace/config/local.cfg
@@ -113,3 +113,25 @@ event.consumer.clip.class = ca.umontreal.bib.calypso.clip.ClipConsumer
 event.consumer.clip.filters = Collection+ADD:Item+Install:Item+Modify:Bitstream+Create:Bitstream+Delete
 calypso.clip.server.url = http://localhost:8000
 calypso.clip.bundle.execute = ORIGINAL
+
+
+##############
+# IR-tracker #
+##############
+
+# Autoriser les origines spécifiques (client et middleware API)
+rest.cors.allowed-origins = http://localhost:3100, ${dspace.ui.url}
+
+
+discovery.facets.email = metadata.email
+discovery.facets.email.facet-type = text
+discovery.facets.email.filter-type = equals
+discovery.facets.email.sortable = true
+
+## dans local.cfg:  
+############## 
+# suivi-papyrus.bib # 
+############## 
+# Autoriser les origines spécifiques (client et middleware API) 
+rest.cors.allowed-origins = http://localhost:4200, ${dspace.ui.url}
+
